# petrsu-unit-testing-001-bundle-cmake-gtest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile.tmp4b0cc  README.md  cmake_install.cmake  cmake_install.cmake.tmp9acf6  sonar-project.properties
.github/workflows/: test-action.yml
123/: CMakeCache.txt  CTestTestfile.cmake
123/tests/: cmake_install.cmake
app/: CMakeLists.txt  cmake_install.cmake  main.c  mathematical_calculator.c  mathematical_calculator.h
df/app/: ctest
tests/: CMakeLists.txt  cmake_install.cmake  ctest-tests  discriminant_test.h  fibonachi_test.h  main.cpp  tst_modify_value.h  tst_stdout.h
tests/input/: TestSTDOut_output.txt
